--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,10 @@
 name: brew pr-pull
-
 on:
   pull_request_target:
-    types:
-      - labeled
-
+    types: [labeled]
+defaults:
+  run:
+    shell: /bin/zsh -Negku {0}
 jobs:
   pr-pull:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
@@ -21,18 +21,18 @@ jobs:
 
       - name: Pull bottles
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
-          PULL_REQUEST: ${{ github.event.pull_request.number }}
-        run: brew pr-pull --debug --tap="$GITHUB_REPOSITORY" "$PULL_REQUEST"
+          HOMEBREW_GITHUB_API_TOKEN: ${{github.token}}
+          PULL_REQUEST: ${{github.event.pull_request.number}}
+        run: brew pr-pull --debug --tap="${GITHUB_REPOSITORY}" "${PULL_REQUEST}"
 
       - name: Push commits
         uses: Homebrew/actions/git-try-push@master
         with:
-          token: ${{ github.token }}
+          token: ${{github.token}}
           branch: main
 
       - name: Delete branch
         if: github.event.pull_request.head.repo.fork == false
         env:
-          BRANCH: ${{ github.event.pull_request.head.ref }}
-        run: git push --delete origin "$BRANCH"
+          BRANCH: ${{github.event.pull_request.head.ref}}
+        run: git push --delete origin "${BRANCH}"
