--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,16 +1,16 @@
 name: brew test-bot
-
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-
+defaults:
+  run:
+    shell: /bin/zsh -Negku {0}
 jobs:
   test-bot:
     strategy:
       matrix:
-        os: [macos-13, macos-14, macos-15]
+        os: [macos-13, macos-15]
     runs-on: ${{matrix.os}}
     steps:
       - name: Set up Homebrew
@@ -32,6 +32,21 @@ jobs:
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
+
+      - name: Rename bottle
+        if: github.event_name == 'pull_request'
+        run: |
+          autoload zmv
+          if [[ "${ImageOS}" = macos15 ]]; then
+            (zmv 'mas-(*).arm64_sequoia.bottle.tar.gz' 'mas-$1.arm64_big_sur.bottle.tar.gz') || true
+          else
+            (zmv 'mas-(*).ventura.bottle.tar.gz' 'mas-$1.high_sierra.bottle.tar.gz') || true
+          fi
+
+      - name: Download 1.8.6 bottle
+        if: github.event_name == 'pull_request' && matrix.os == 'macos-15'
+        run: |
+          curl -LO https://github.com/mas-cli/mas/releases/download/v1.8.6/mas-1.8.6.el_capitan.bottle.tar.gz
 
       - name: Upload bottles as artifact
         if: always() && github.event_name == 'pull_request'
