Only try to replace macOS version name in *"${deploy}.bottle.json" if file exists.
Resolve #88

Signed-off-by: Ross Goldberg <484615+rgoldberg@users.noreply.github.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
 
           autoload zmv
           zmv "(*)${built}(*)" "\$1${deploy}\$2"
-          sed -i '' "s/${built}/${deploy}/g" *"${deploy}.bottle.json"
+          [[ -n *"${deploy}.bottle.json"(#qN) ]] && sed -i '' "s/${built}/${deploy}/g" *"${deploy}.bottle.json" || true
 
       - name: Upload bottles as artifact
         if: always() && github.event_name == 'pull_request'
